<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pondoxx"
    tools:context=".CalendarioActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondocurvo"
        android:scaleType="centerCrop"
        android:alpha="0.5" />


    <!-- Título de la actividad -->
    <TextView
        android:id="@+id/calendario_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calendario"
        android:textColor="#D3D3D3"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Calendario interactivo centrado -->

    <!-- Texto para mostrar la fecha seleccionada -->

    <!-- Botón para agregar entrenamiento -->
    <android.widget.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="323dp"
        android:layout_height="310dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendario_title"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/selectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Fecha seleccionada: "
        android:textColor="#D3D3D3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView" />

    <Button
        android:id="@+id/btnAddTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Añadir Entrenamiento"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/selectedDateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewBottom"
        android:layout_width="451dp"
        android:layout_height="99dp"
        android:contentDescription="Imagen en la parte inferior"
        android:scaleType="fitXY"
        android:src="@drawable/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/menu_icon_button"
        android:layout_width="42dp"
        android:layout_height="37dp"
        android:layout_marginTop="802dp"
        android:alpha="0.4"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_menu"
        android:scaleType="fitCenter"
        android:src="@drawable/menunew"
        app:layout_constraintEnd_toStartOf="@id/calendario_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/calendario_button"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="800dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_calendario"
        android:scaleType="fitCenter"
        android:alpha="0.8"
        android:src="@drawable/calendariogris"
        app:layout_constraintEnd_toStartOf="@id/usuario_button"
        app:layout_constraintStart_toEndOf="@id/menu_icon_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/usuario_button"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:layout_marginTop="802dp"
        android:alpha="0.4"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_usuario"
        android:scaleType="fitCenter"
        android:src="@drawable/usermenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calendario_button"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
