<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pondoxx">

    <!-- Imagen de fondo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondocurvo"
        android:scaleType="centerCrop"
        android:alpha="0.5" />

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/mi_usuario_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MI USUARIO"
        android:textColor="#F5F5F5"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón Información de mi Cuenta -->

    <!-- Botón Ajustes -->
    <LinearLayout
        android:id="@+id/infoCuentaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_momt"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mi_usuario_title">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="Información de mi Cuenta"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ajustesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/button_momt"
        app:layout_constraintTop_toBottomOf="@id/infoCuentaButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ajustes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ajustes"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <!-- Botón Ayuda -->
    <LinearLayout
        android:id="@+id/ayudaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/button_momt"
        app:layout_constraintTop_toBottomOf="@id/ajustesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ayuda" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ayuda"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <!-- Botón Cerrar Sesión -->
    <LinearLayout
        android:id="@+id/cerrarSesionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/button_shape_red"
        app:layout_constraintTop_toBottomOf="@id/ayudaButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/salir" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cerrar Sesión"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imageViewBottom"
        android:layout_width="451dp"
        android:layout_height="99dp"
        android:contentDescription="Imagen en la parte inferior"
        android:scaleType="fitXY"
        android:src="@drawable/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/menu_icon_button"
        android:layout_width="42dp"
        android:layout_height="37dp"
        android:layout_marginTop="802dp"
        android:alpha="0.4"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_menu"
        android:scaleType="fitCenter"
        android:src="@drawable/menunew"
        app:layout_constraintEnd_toStartOf="@id/calendario_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/calendario_button"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="800dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_calendario"
        android:scaleType="fitCenter"
        android:alpha="0.8"
        android:src="@drawable/calendariogris"
        app:layout_constraintEnd_toStartOf="@id/usuario_button"
        app:layout_constraintStart_toEndOf="@id/menu_icon_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/usuario_button"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:layout_marginTop="802dp"
        android:alpha="0.4"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_usuario"
        android:scaleType="fitCenter"
        android:src="@drawable/usermenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calendario_button"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
